--- a/index.html
+++ b/index.html
@@ -100,9 +100,165 @@
                <p>Download</p>
             </div>
          </div>
+
+         <div class="views">
+            <p>535 visualizações  14 de ago. de 2023</p>
+         </div>
+
+         <div class="details">
+            <p>
+               Descubra a verdade por trás do mundo da programação! 
+               Hoje, nós desvendamos 10 mitos (e algumas verdades) sobre desenvolvedores.
+               Será que são todos hackers isolados ou passam o dia inteiro codando? 
+               Venha conhecer nossa realidade, equilibrando bugs e inovação.
+            </p>
+         </div>
       </div>
+      
       <div class="playlist-video">
-         <p>Teste</p>
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-01.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Geração Tech Unimed - BH - Ciência de Dados</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>2,1 mil visualizações</p>
+                  <p>Transmitido há 2 dias</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-02.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Scrum Talks</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>1,6 mil visualizações</p>
+                  <p>Transmitido há 3 dias</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-03.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Machine Learning Avançado - Fast Track</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>1,7 mil visualizações</p>
+                  <p>Transmitido há 4 dias</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-04.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Machine Learning Avançado - Fast Track</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>971 visualizações</p>
+                  <p>Transmitido há 5 dias</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-05.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Como aprender a programar Python do ZERO</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>711 visualizações</p>
+                  <p>Transmitido há 6 dias</p>
+               </div>
+            </div>
+         </div>
+         
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-01.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Geração Tech Unimed - BH - Ciência de Dados</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>2,1 mil visualizações</p>
+                  <p>Transmitido há 2 dias</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-02.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Scrum Talks</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>1,6 mil visualizações</p>
+                  <p>Transmitido há 3 dias</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-03.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Machine Learning Avançado - Fast Track</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>1,7 mil visualizações</p>
+                  <p>Transmitido há 4 dias</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="thumbnail">
+            <div class="thumbnail-video">
+               <img src="assets/img/thumbnails/thumb-04.png" alt="Vídeo Aula DIO">
+            </div>
+            <div class="thumbnail-infos">
+               <h2>Machine Learning Avançado - Fast Track</h2>
+               <div class="thumbnail-channel">
+                  <p>DigitalInnovationOne</p>
+               </div>
+               <div class="thumbnail-views">
+                  <p>971 visualizações</p>
+                  <p>Transmitido há 5 dias</p>
+               </div>
+            </div>
+         </div>
       </div>
    </main>
 </body>
